# vigia-cam

./: .editorconfig  .gitignore  AppIcon.icns  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  build.sh  build_app.sh  pyproject.toml  requirements.txt  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
VigiaCam/: Package.swift  run_tests.sh
VigiaCam/Sources/VigiaCam/App/: ContentView.swift  VigiaCamApp.swift
VigiaCam/Sources/VigiaCam/Core/Security/: CryptoService.swift  RBACService.swift
VigiaCam/Sources/VigiaCam/Core/Storage/: StorageService.swift
VigiaCam/Sources/VigiaCam/Features/Alarms/: AlarmModels.swift  AlarmService.swift  AlarmsView.swift
VigiaCam/Sources/VigiaCam/Features/Auth/: LoginView.swift
VigiaCam/Sources/VigiaCam/Features/Business/: AnalyticsConfigService.swift  BusinessAnalytics.swift  BusinessDashboardView.swift  BusinessMetricsService.swift  NichoPreset.swift
VigiaCam/Sources/VigiaCam/Features/Cameras/: CameraCardView.swift  CameraCardViewModel.swift  CameraDetailView.swift  CameraListView.swift  CameraService.swift
VigiaCam/Sources/VigiaCam/Resources/: Info.plist
VigiaCam/Sources/VigiaCam/UI/Theme/: Colors.swift
VigiaCam/Sources/VigiaCamTests/: VigiaCamTests.swift
VigiaCam/Tests-cli/: main.swift
cameras_app/: __init__.py  __main__.py  api.py  app.py  cameras.json  detector.py  servicos.py  theme.py
docs/: index.html
tests/: conftest.py  test_core.py
yolov8n.mlpackage/Data/com.apple.CoreML/: model.mlmodel
(+14 files in other folders)
